fix z-index issue
color options was set to 1 and the page links menu was set to 1 so when you used it near the color options section it wouldn't work.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1674,7 +1674,7 @@ circle {
       justify-content: center;
       position: fixed;
       width: 100vw;
-      z-index: 1;
+      z-index: 10;
       top: 109px;
       transition: transform 0.3s;
 
